# LLTFI-Mac-LLVM20-arm64

./: .gitignore  LICENSE  README.md
LLTFI/: .clang-format  .clang-tidy  CHANGELOG.md  CODING_GUIDELINES.md  CONTRIBUTING.md  README.md  architecture.md  caveats.txt  lint.sh  migration.md  setup  setup.cfg
LLTFI/docker/: Dockerfile
LLTFI/docs/: adding_a_test.md  input_yaml_guide.md  tutorial_first_experiment.md  tutorial_ml_experiment.md
LLTFI/llvm_passes/: CustomTensorOperatorInstSelector.cpp  HardwareFailureAutoScanPass.cpp  MainGraphInstSelector.cpp  RegisterPasses.cpp  SampleFIInstSelector.cpp  SampleFIRegSelector.cpp  SoftwareFailureAutoScanPass.cpp
LLTFI/llvm_passes/core/: Controller.cpp  Controller.h  FICustomSelectorManager.cpp  FICustomSelectorManager.h  FIInstSelector.cpp  FIInstSelector.h  FIInstSelectorManager.cpp  FIInstSelectorManager.h  FIRegSelector.cpp  FIRegSelector.h  FaultInjectionPass.cpp  FaultInjectionPass.h  GenLLFIIndexPass.cpp  GenLLFIIndexPass.h  InstTracePass.cpp  Utils.cpp  (+8 more)
docs/: INSTALL.md  PATCHES.md  TROUBLESHOOTING.md
onnx-mlir/src/Conversion/: CMakeLists.txt
onnx-mlir/src/Conversion/KrnlToLLVM/: CMakeLists.txt  ConvertKrnlToLLVM.cpp  ConvertKrnlToLLVM.hpp  KrnlEmitFICall.cpp  KrnlEmitFICallMatMul.cpp
onnx-mlir/src/Conversion/ONNXToKrnl/Math/: Gemm.cpp  MatMul.cpp
onnx-mlir/src/Conversion/ONNXToKrnl/NN/: Conv.cpp
patches/: llvm-float8-builder.patch  onnx-mlir-llvm20-compat.patch
scripts/: apply-llvm-float8-patch.sh  build-lltfi.sh  build-llvm.sh  build-onnx-mlir.sh  install-json-c.sh  install.sh  run-mnist-demo.sh
(+37 files in other folders)
